adicionando operadores de atribuição js

--- a/pages/aulas/aula-05.html
+++ b/pages/aulas/aula-05.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
     <link rel="icon" href="../../img/Microcamp.png" type="image/x-icon">
     <script src="../../js/operadores comparativos.js"></script>
+    <script src="../../js/operadores de atribuicao.js"></script>
     <script src="../../js/bootstrap/program.js"></script>
 
 
@@ -163,9 +164,95 @@
                         </div>
                     </div>
                 </div>
+                <h3 class="cinza-escuro text-center text-white p-2 m-3">Operadoes de atribuição</h3>
+                <div class="col-lg-6">
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <p class="cinza-claro p-2 m-3">atribuição de adição JavaScript</p>
+                        <div class="card m-3">
+                            <div class="card-body">
+                                <p class="">Exemplo de uma atribuição de adição de 4 += 1= <strong
+                                        id="resultado-atAdicao">Mostrando o resultado...
+                                        </resultado>
+                                    </strong>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-atAdicao" href="#" onclick='atAdicao()'>resultado</a>
+                        </div>
+                    </div>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <p class="cinza-claro p-2 m-3">Diferente com JavaScript</p>
+                        <div class="card m-3">
+                            <div class="card-body">
+                                <p>Exemplo de uma comparação diferente de 4 != 2= <strong
+                                        id="resultado-diferente">Mostrando o
+                                        resultado...</strong></p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-diferente" href="#" onclick='diferente()'>resultado</a>
+                        </div>
+                    </div>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <p class="cinza-claro p-2 m-3">Maior com JavaScript</p>
+                        <div class="card m-3">
+                            <div class="card-body">
+                                <p>Exemplo de uma comparação maior de 3 > 1= <strong id="resultado-maior">Mostrando o
+                                        resultado...</strong>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-maior" href="#" onclick='maior()'>resultado</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <p class="cinza-claro p-2 m-3">Menor com JavaScript</p>
+                        <div class="card m-3">
+                            <div class="card-body">
+                                <p>Exemplo de uma comparação menor de 2 < 9=<strong id="resultado-menor">Mostrando o
+                                        resultado...</strong></p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-menor" href="#" onclick='menor()'>resultado</a>
+                        </div>
+                    </div>
+
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <p class="cinza-claro p-2 m-3">Maior-Igual com JavaScript</p>
+                        <div class="card m-3">
+                            <div class="card-body">
+                                <p>Exemplo de uma comparação maior-igual de 3 >= 1= <strong
+                                        id="resultado-maiorIgual">Mostrando o resultado...
+                                        </resultado>
+                                    </strong></p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-maiorIgual" href="#" onclick='maiorIgual()'>resultado</a>
+                        </div>
+                    </div>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <p class="cinza-claro p-2 m-3">Menor-Igual com JavaScript</p>
+                        <div class="card m-3">
+                            <div class="card-body">
+                                <p>Exemplo de uma comparação de menor-igual 2 <= 9=<strong id="resultado-menorIgual">
+                                        Mostrando o
+                                        resultado...</strong></p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-menorIgual" href="#" onclick='menorIgual()'>resultado</a>
+                        </div>
+                    </div>
+                </div>
         </article>
     </section>
-    <footer class="text-center p-2 mt-5 bg-dark text-white">
+    <footer class="text-center p-2 bg-dark text-white">
         <p>Desenvolvido por Gabriel Oliveira</p>
     </footer>
 </body>
