--- a/pages/aulas/aula-02.html
+++ b/pages/aulas/aula-02.html
@@ -118,7 +118,7 @@
 
         </article>
     </section>
-    <footer class="text-center p-2 mt-5 bg-dark text-white">
+    <footer class="text-center p-2 bg-dark text-white">
         <p>Desenvolvido por Gabriel Oliveira</p>
     </footer>
 </body>
