Terminando ajustes de layout e adicionando botões a aula 5

--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -22,7 +22,7 @@
     <header class="">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
-                <ul class="navbar-nav container mt-3">
+                <ul class="navbar-nav container">
                     <li class="nav-item">
                         <a class="navbar-brand" href="http:microcamp.com">
                             <img src="../../img/logo.jpg" style="width: 60px;" alt="Logo Microcamp" id="arredondar">
@@ -37,7 +37,7 @@
     </header>
     <section class="row">
         <nav class="col-lg-3 bg-purple">
-            <ul class="navbar-nav mt-3">
+            <ul class="navbar-nav m-3">
                 <li class="nav-item">
                     <a href="aula-01.html">
                         <div class="botao-lista">
@@ -61,14 +61,14 @@
                 </li>
                 <li class="nav-item">
                     <a href="aula-04.html">
-                        <div class="botao-lista"> 
+                        <div class="botao-lista">
                             Aula 04 - BootStrap
                         </div>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="aula-05.html">
-                        <div class="botao-lista"> 
+                        <div class="botao-lista">
                             Aula 05 - operadores em JavaScript
                         </div>
                     </a>
@@ -98,9 +98,9 @@
             </div>
             <div class="text-center m-3">
                 <a class="botao" href="#/"
-                onclick='document.getElementById("altera").innerHTML = "Olá Mundo! Em JavaScript 👍"'>OK</a>
+                    onclick='document.getElementById("altera").innerHTML = "Olá Mundo! Em JavaScript 👍"'>OK</a>
             </div>
-            <h3 class="cinza-escuro text-center text-white p-2 m-3">Operadoes aritméticos</h3>
+            <h3 class="cinza-escuro text-center text-white p-2 m-3">Operadores aritméticos</h3>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="p-2 mt-3 bg-white m-3">
@@ -153,13 +153,13 @@
                         <div class="text-center">
                             <a class="botao" id="confirmado-div" href="#" onclick='divisao()'>resultado</a>
                         </div>
-                       </div> 
+                    </div>
                 </div>
                 <div class="col-lg-6">
-                <div class="p-2 mt-3 bg-white m-3">
-                    <h3 class="cinza-claro p-2 m-3">05 Exponenciação com JavaScript</h3>
-                    <div class="card m-3">
-                        <div class="card-body">
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <h3 class="cinza-claro p-2 m-3">05 Exponenciação com JavaScript</h3>
+                        <div class="card m-3">
+                            <div class="card-body">
                                 <p>Exemplo de uma soma de 2**3= <strong id="resultado-ex">Mostrando o resultado...
                                         </resultado>
                                     </strong></p>
@@ -179,11 +179,12 @@
                         </div>
                         <div class="text-center">
                             <a class="botao" id="confirmado-res" href="#" onclick='resto()'>resultado</a>
-                        </div>                    
-                        <div class="p-2 mt-3 bg-white m-3">
-                            <h3 class="cinza-claro p-2 m-3">07 Incrementação com JavaScript</h3>
-                            <div class="card m-3">
-                                <div class="card-body">
+                        </div>
+                    </div>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <h3 class="cinza-claro p-2 m-3">07 Incrementação com JavaScript</h3>
+                        <div class="card m-3">
+                            <div class="card-body">
                                 <p>Exemplo de uma subtração de 5-3= <strong id="resultado-inc">Mostrando o
                                         resultado...</strong></p>
                             </div>
