--- a/pages/aulas/aula-04.html
+++ b/pages/aulas/aula-04.html
@@ -22,7 +22,7 @@
     <header class="">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
-                <ul class="navbar-nav container mt-3">
+                <ul class="navbar-nav container">
                     <li class="nav-item">
                         <a class="navbar-brand" href="http:microcamp.com">
                             <img src="../../img/logo.jpg" style="width: 60px;" alt="Logo Microcamp" id="arredondar">
@@ -37,7 +37,7 @@
     </header>
     <section class="row">
         <nav class="col-lg-3 bg-purple">
-            <ul class="navbar-nav mt-3">
+            <ul class="navbar-nav m-3">
                 <li class="nav-item">
                     <a href="aula-01.html">
                         <div class="botao-lista">
@@ -163,9 +163,7 @@
                                         A propriedade Inline-block foi removida e teremos um menu suspenso preto como
                                         padrão para a classe dropdown-menu-dark.
                                     </li>
-                                    <li>
-                                        Cores extras adicionadas aos looks ,, Uma paleta de cores aprimorada.
-                                    </li>
+                                    
                                 </ul>
                             </div>
                                
