adicionando JavaScript das portas lógicas

--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -61,6 +61,13 @@
                         <td>JavaScript</td>
                         <td>Operadores em JavaScript</td>
                     </tr>
+                    <tr>
+                        <td>
+                            <a class="botao" href="aulas/aula-06.html">06</a>
+                        </td>
+                        <td>JavaScript</td>
+                        <td>Portas lógicas JavaScript</td>
+                    </tr>
                 </table>
                
             </div>
