--- a/pages/aulas/aula-01.html
+++ b/pages/aulas/aula-01.html
@@ -69,6 +69,13 @@
                     </div>
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="aula-06.html">
+                    <div class="botao-lista"> 
+                        Aula 06 - portas lógicas
+                    </div>
+                </a>
+            </li>
         </ul>
         </nav>
         <article class="col-lg-9">
